<resources>
    <string name="app_name">RestaurantAdvisor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="restaurantadvisor">RestaurantAdvisor</string>
    <string name="sign_in_or_create_an_account">Sign in \nor \nCreate an Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="continuetext">Continue</string>
    <string name="searchs">Search by Cuisine or Type of Dining</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="past_orders">Past Orders</string>
    <string name="order_history">Order History</string>
    <string name="reviews_left">Reviews Left</string>
    <string name="kfc">kfc</string>
    <string name="arbys">arbys</string>
    <string name="culvers">culvers</string>
    <string name="dairyqueen">dairyqueen</string>
    <string name="littlecaesars">littlecaesars</string>
    <string name="mcdonalds">mcdonalds</string>
    <string name="papajohns">papajohns</string>
    <string name="pizzaranch">pizzaranch</string>
    <string name="tacobell">tacobell</string>
    <string name="subway">subway</string>
    <string name="wendys">wendys</string>
    <string name="todo">TODO</string>
    <string name="featured_restaurants">Featured Restaurants</string>
    <string name="restaurant_reviews">Restaurant \nReviews</string>
    <string name="order_carryout">Order Carryout</string>
    <string name="image_of_restaurant">Image of restaurant</string>
    <string name="back">Back</string>
    <string name="order">Order</string>
    <string name="add_review">Add Review</string>
    <string name="enter_number_of_stars">Enter Number of Stars (1-5)</string>
    <string name="enter_review">Enter Review</string>
    <string name="number_of_stars">Number of Stars</string>
    <string name="no_orders">No Orders</string>
</resources>