<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="347dp"
        android:layout_height="88dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/restaurantadvisor"
        android:textColor="@color/black"
        android:textSize="@dimen/headingsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="257dp"
        android:layout_height="141dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sign_in_or_create_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/Subheadingsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.071"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="327dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="326dp"
        android:layout_height="56dp"
        android:layout_marginTop="59dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/enter_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/button"
        android:layout_width="246dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/black"
        android:onClick="nextScreen"
        android:text="@string/continuetext"
        android:textSize="@dimen/Subheadingsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.202" />
</androidx.constraintlayout.widget.ConstraintLayout>